@@ -27,7 +27,7 @@
 
 #define PROGRAM_VERSION 0
 #define PROGRAM_RELEASE 0
-#define PROGRAM_SUB_RELEASE 4
+#define PROGRAM_SUB_RELEASE 5
 #define MAX_FILE_NAME_LENGTH 256
 #define MAX_ARR_LENGTH 10 
 
